--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,6 +2,16 @@ Changelog
 =========
 
 
+2.0.3 (unreleased)
+------------------
+
+- Implement faster custom_sort methods for sorting on the readable fullname,
+  with the help of the sort_dicts from og.ogds.base
+  Issue #1325 og.tabbedview: custom_sort methoden performanter implementieren.
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1325
+  [phgross]
+
+
 2.0.2 (2011-11-29)
 ------------------
 
