--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,7 +5,10 @@ Changelog
 2.2.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed and cleaned up the linked_ogds_author helper(including tests).
+  Issue #1733 DI DIS: Journal-Tab in Eingangskorb laedt bis in alle Ewigkeit (Sanduhr)
+  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1733/
+  [phgross]
 
 
 2.2.4 (2012-09-25)
