Fixed cancelbutton handling in send documents form.

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 2.0.6 (2012-10-16)
 ------------------
 
+- Fixed cancelbutton handling in send documents form.
+  [phgross]
+
 - Adjust mail workflow: Disable sharing actions (delegate roles).
   Issue #1613 Test Rot und Gelb 2.4: Mail hat versehentlich die Aktion Freigabe
   https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1613
