--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,8 +2,15 @@ Changelog
 =========
 
 
-2.1 (unreleased)
-----------------
+2.0.7 (unreleased)
+------------------
+
+- Fixed cancelbutton handling in send documents form.
+  [phgross]
+
+
+2.0.6 (2012-10-16)
+------------------
 
 - Fixed cancelbutton handling in send documents form.
   [phgross]
