--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,6 +5,9 @@ Changelog
 4.2.0 (unreleased)
 ------------------
 
+- Refactor quickupload-adapter to use commands.
+  [deiferni]
+
 - Use checkbox widget to select participations roles.
   This fixes an issue with ie10 and ie11 where no selection could be made.
   [deiferni]
