--- a/opengever/base/locales/fr/LC_MESSAGES/ftw.tabbedview.po
+++ b/opengever/base/locales/fr/LC_MESSAGES/ftw.tabbedview.po
@@ -68,6 +68,9 @@ msgstr "Dernières modifications"
 msgid "closed-forwardings"
 msgstr "Transmissions fermé"
 
+msgid "committees"
+msgstr ""
+
 msgid "contacts"
 msgstr "Contacts"
 
@@ -131,6 +134,15 @@ msgstr "Centre de coûts"
 msgid "local"
 msgstr "Local"
 
+msgid "meetings"
+msgstr ""
+
+msgid "members"
+msgstr ""
+
+msgid "memberships"
+msgstr ""
+
 msgid "my_issues"
 msgstr "Mes tickets"
 
@@ -167,6 +179,9 @@ msgstr "Aperçu"
 msgid "process"
 msgstr "Avancement"
 
+msgid "proposals"
+msgstr ""
+
 msgid "related_documents"
 msgstr "Documents liés"
 
@@ -181,6 +196,9 @@ msgstr "Info"
 
 msgid "subdossiers"
 msgstr "Sous-dossiers"
+
+msgid "submittedproposals"
+msgstr ""
 
 msgid "tasks"
 msgstr "Tâches"
